--- a/Mappy.Net/Mappy.Net.csproj
+++ b/Mappy.Net/Mappy.Net.csproj
@@ -14,6 +14,7 @@ an id and transfers the value of the input to the output object.</Description>
         <RepositoryUrl>https://github.com/Marcel-Baumgartner/Mappy.Net</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>mapper,csharp</PackageTags>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
 </Project>
